--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "puppeteer install"
+    "postinstall": "npx puppeteer install"
   },
   "type": "module",
   "keywords": [],
