--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "postinstall": "npx puppeteer install"
+    "postinstall": "apt-get update && apt-get install -y google-chrome-stable"
   },
   "keywords": [],
   "author": "",
